updated and added achievements.html page

--- a/index.html
+++ b/index.html
@@ -288,7 +288,8 @@
                     <div class="text-center bg-white p-6 rounded-lg shadow-sm card-hover transition">
                         <div
                             class="w-28 h-28 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center shadow-inner">
-                            <i class="fas fa-user text-blue-800 text-4xl"></i>
+                            <img src="/assets/members/ajay.jpeg" alt="Ajay Vardhanan J V"
+                                class="w-24 h-24 rounded-full object-cover border-4 border-white shadow-md">
                         </div>
                         <h4 class="font-bold text-lg">Ajay Vardhanan J V</h4>
                         <p class="text-blue-800 font-medium">Chairperson</p>
@@ -297,7 +298,8 @@
                     <div class="text-center bg-white p-6 rounded-lg shadow-sm card-hover transition">
                         <div
                             class="w-28 h-28 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center shadow-inner">
-                            <i class="fas fa-user text-blue-800 text-4xl"></i>
+                            <img src="/assets/members/bharathpi.jpeg" alt="Bharath P I"
+                                class="w-24 h-24 rounded-full object-cover border-4 border-white shadow-md">
                         </div>
                         <h4 class="font-bold text-lg">Bharath P I</h4>
                         <p class="text-blue-800 font-medium">Vice Chairperson</p>
@@ -306,7 +308,8 @@
                     <div class="text-center bg-white p-6 rounded-lg shadow-sm card-hover transition">
                         <div
                             class="w-28 h-28 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center shadow-inner">
-                            <i class="fas fa-user text-blue-800 text-4xl"></i>
+                            <img src="/assets/members/manushree.jpeg" alt="Manushree B"
+                                class="w-24 h-24 rounded-full object-cover border-4 border-white shadow-md">
                         </div>
                         <h4 class="font-bold text-lg">Manushree B</h4>
                         <p class="text-blue-800 font-medium">Secretary</p>
@@ -326,17 +329,16 @@
         </div>
     </section>
 
-    <!-- Events Section -->
     <section id="events" class="py-20 bg-gray-50">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold text-center text-blue-800 mb-16">Events @ ASME SRIT</h2>
-
             <div class="mb-16">
                 <h3 class="text-2xl md:text-3xl font-bold text-blue-800 mb-8 text-center">Upcoming Events</h3>
                 <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
+
                     <div class="bg-white rounded-xl overflow-hidden shadow-lg card-hover transition">
-                        <div class="relative h-60 bg-blue-800 flex items-center justify-center">
-                            <i class="fas fa-calendar-alt text-white text-6xl"></i>
+                        <div class="relative h-60">
+                            <img src="/assets/tnnovate.jpg" alt="ASME TN-NOVATE" class="h-full w-full object-cover">
                             <div class="absolute bottom-0 left-0 bg-white px-4 py-2 text-blue-800 font-bold text-lg">
                                 Oct 10, 2025
                             </div>
@@ -348,14 +350,14 @@
                             <div class="flex justify-between items-center">
                                 <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm">Project
                                     Expo</span>
-                                <!-- <a href="#" class="text-blue-800 font-medium hover:underline">Register Now →</a> -->
                             </div>
                         </div>
                     </div>
 
                     <div class="bg-white rounded-xl overflow-hidden shadow-lg card-hover transition">
                         <div class="relative h-60 bg-blue-800 flex items-center justify-center">
-                            <i class="fas fa-laptop-code text-white text-6xl"></i>
+                            <img src="/assets/tnnovate1.jpg" alt="ASME TN-NOVATE Hackathon"
+                                class="h-full w-full object-cover">
                             <div class="absolute bottom-0 left-0 bg-white px-4 py-2 text-blue-800 font-bold text-lg">
                                 Oct 9, 2025
                             </div>
@@ -366,14 +368,13 @@
                                 solutions and mechanical innovations.</p>
                             <div class="flex justify-between items-center">
                                 <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm">Hackathon</span>
-                                <!-- <a href="#" class="text-blue-800 font-medium hover:underline">Learn More →</a> -->
                             </div>
                         </div>
                     </div>
 
                     <div class="bg-white rounded-xl overflow-hidden shadow-lg card-hover transition">
                         <div class="relative h-60 bg-blue-800 flex items-center justify-center">
-                            <i class="fas fa-robot text-white text-6xl"></i>
+                            <img src="/assets/efx.png" alt="ASME EFX SRIT" class="object-cover">
                             <div class="absolute bottom-0 left-0 bg-white px-4 py-2 text-blue-800 font-bold text-lg">
                                 TBD
                             </div>
@@ -384,20 +385,19 @@
                                 networking for young engineers.</p>
                             <div class="flex justify-between items-center">
                                 <span class="bg-blue-100 text-blue-800 px-3 py-1 rounded-full text-sm">Hands-on</span>
-                                <!-- <a href="#" class="text-blue-800 font-medium hover:underline">Join Now →</a> -->
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="text-center">
-            <a href="#" class="inline-flex items-center text-blue-800 font-bold text-lg hover:text-blue-600 transition">
-                View All Events
-                <i class="fas fa-arrow-right ml-2"></i>
-            </a>
-        </div>
+            <div class="text-center">
+                <a href="#"
+                    class="inline-flex items-center text-blue-800 font-bold text-lg hover:text-blue-600 transition">
+                    View All Events
+                    <i class="fas fa-arrow-right ml-2"></i>
+                </a>
+            </div>
         </div>
     </section>
 
@@ -480,75 +480,92 @@
             <div class="grid md:grid-cols-2 gap-10 mb-16">
                 <div class="achievement-card bg-white rounded-xl overflow-hidden shadow-lg">
                     <div class="h-60 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80"
-                            alt="Best Student Section Award" class="w-full h-full object-cover achievement-img">
+                        <img src="/assets/achievements/shh.jpg" alt="Best Student Section Award"
+                            class="w-full h-full object-cover achievement-img">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center mb-3">
                             <div class="bg-blue-100 p-2 rounded-full mr-4">
                                 <i class="fas fa-trophy text-blue-800 text-xl"></i>
                             </div>
-                            <h3 class="text-xl font-bold">Best Student Section Award 2023</h3>
+                            <h3 class="text-xl font-bold">Selected for Pre-Finals of Shine Healthcare Hackathon</h3>
                         </div>
-                        <p class="text-gray-600">Recognized for outstanding programming, member engagement, and
-                            contribution to the mechanical engineering community through innovative events and
-                            workshops.</p>
+                        <p class="text-gray-600"> Aug 2025: The Team Gix Notion has selected for the Pre-Finals round of
+                            the Shine
+                            Healthcare Hackathon jointly organized by The Tamilnadu Dr. M.G.R. Medical University,
+                            StartupTN and Aakam360. The Pre-finals happened at UEI Coimbatore Cohort and the team
+                            presented the project on "Bongos Therapy for Autism Children"</p>
                     </div>
                 </div>
 
                 <div class="achievement-card bg-white rounded-xl overflow-hidden shadow-lg">
                     <div class="h-60 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1553877522-43269d4ea984?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80"
-                            alt="E-Fest Competition" class="w-full h-full object-cover achievement-img">
+                        <img src="/assets/achievements/oldagehome.jpeg" alt="E-Fest Competition"
+                            class="w-full h-full object-cover achievement-img">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center mb-3">
                             <div class="bg-blue-100 p-2 rounded-full mr-4">
                                 <i class="fas fa-medal text-blue-800 text-xl"></i>
                             </div>
-                            <h3 class="text-xl font-bold">E-Fest Regional Champions 2022</h3>
+                            <h3 class="text-xl font-bold">Best Home in Town - Senior Citizens Home Visit</h3>
                         </div>
-                        <p class="text-gray-600">Our team secured first place in the Human Powered Vehicle Challenge,
-                            showcasing innovative design and engineering excellence against competitors from across the
-                            region.</p>
-                    </div>
-                </div>
-
-                <div class="achievement-card bg-white rounded-xl overflow-hidden shadow-lg">
-                    <div class="h-60 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1523240795612-9a054b0db644?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80"
-                            alt="Community Outreach" class="w-full h-full object-cover achievement-img">
-                    </div>
-                    <div class="p-6">
-                        <div class="flex items-center mb-3">
-                            <div class="bg-blue-100 p-2 rounded-full mr-4">
-                                <i class="fas fa-award text-blue-800 text-xl"></i>
-                            </div>
-                            <h3 class="text-xl font-bold">Community Impact Award 2022</h3>
-                        </div>
-                        <p class="text-gray-600">Awarded for excellence in STEM education initiatives and outreach
-                            programs that inspired over 500 students from local schools to pursue engineering careers.
+                        <p class="text-gray-600">
+                            July 2025: Our members visited the Senior Citizens Home in Mathipalayam, Thenkarai,
+                            Coimbatore, spending a
+                            day sharing smiles, stories, and heartfelt moments with the residents. Nearly 25 students
+                            came
+                            together to bring warmth, wisdom, and joy, making it a truly memorable experience for
+                            everyone
+                            involved.
                         </p>
                     </div>
                 </div>
 
                 <div class="achievement-card bg-white rounded-xl overflow-hidden shadow-lg">
                     <div class="h-60 overflow-hidden">
-                        <img src="https://images.unsplash.com/photo-1517245386807-bb43f82c33c4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&q=80"
-                            alt="Innovation Award" class="w-full h-full object-cover achievement-img">
+                        <img src="/assets/achievements/efest-cad.jpg" alt="ASME E-Fest Skills Competition"
+                            class="w-full h-full object-cover achievement-img">
                     </div>
                     <div class="p-6">
                         <div class="flex items-center mb-3">
                             <div class="bg-blue-100 p-2 rounded-full mr-4">
-                                <i class="fas fa-lightbulb text-blue-800 text-xl"></i>
+                                <i class="fas fa-trophy text-blue-800 text-xl"></i>
                             </div>
-                            <h3 class="text-xl font-bold">Innovation Excellence Award 2021</h3>
+                            <h3 class="text-xl font-bold">1st Prize - ASME E-Fest Skills Competition (CAD & Simulation
+                                Challenge)</h3>
                         </div>
-                        <p class="text-gray-600">Recognized for developing sustainable engineering solutions and
-                            innovative projects that address real-world challenges in energy efficiency and mechanical
-                            design.</p>
+                        <p class="text-gray-600">June 2023: Our team won 1st Prize in the final round of the ASME E-Fest
+                            Skills Competition in the "CAD & Simulation Challenge" category, an international-level
+                            event.</p>
                     </div>
                 </div>
+
+                <div class="achievement-card bg-white rounded-xl overflow-hidden shadow-lg">
+                    <div class="h-60 overflow-hidden">
+                        <img src="/assets/achievements/ikdc23.jpg" alt="IKDC Go-Kart Championship"
+                            class="w-full h-full object-cover achievement-img">
+                    </div>
+                    <div class="p-6">
+                        <div class="flex items-center mb-3">
+                            <div class="bg-blue-100 p-2 rounded-full mr-4">
+                                <i class="fas fa-flag-checkered text-blue-800 text-xl"></i>
+                            </div>
+                            <h3 class="text-xl font-bold">Best Acceleration & Autocross - IKDC'23 Go-Kart Championship
+                            </h3>
+                        </div>
+                        <p class="text-gray-600">July 9, 2023: Team Garudans won "Best Acceleration" and "Best
+                            Autocross" awards at the National Level Go-Kart Championship, IKDC'23, held in Coimbatore.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center mt-12">
+                <a href="/achievements.html"
+                    class="inline-flex items-center bg-blue-800 text-white px-6 py-3 rounded-lg font-medium hover:bg-blue-700 transition">
+                    <i class="fas fa-trophy mr-2"></i>
+                    View All Achievements
+                </a>
             </div>
         </div>
     </section>
@@ -557,18 +574,24 @@
     <section id="membership" class="py-20 bg-white">
         <div class="container mx-auto px-4">
             <h2 class="text-3xl md:text-4xl font-bold text-center text-blue-800 mb-16">Membership & Benefits</h2>
-
             <div class="max-w-4xl mx-auto mb-16">
                 <div class="bg-gradient-to-r from-blue-800 to-blue-600 text-white p-10 rounded-xl shadow-xl">
                     <h3 class="text-2xl md:text-3xl font-bold mb-6">Join ASME SRIT Today!</h3>
                     <p class="text-xl mb-8">Become part of a global community of mechanical engineers and gain access to
                         exclusive resources, networking opportunities, and professional development programs that will
                         accelerate your career.</p>
-                    <a href="https://www.asme.org/membership" target="_blank"
-                        class="bg-white text-blue-800 px-8 py-4 rounded-lg font-bold hover:bg-blue-100 transition inline-block text-lg shadow-md">
-                        <i class="fas fa-user-plus mr-2"></i>
-                        Join ASME Now
-                    </a>
+                    <div class="flex flex-wrap gap-4">
+                        <a href="https://www.asme.org/membership" target="_blank"
+                            class="bg-white text-blue-800 px-8 py-4 rounded-lg font-bold hover:bg-blue-100 transition inline-block text-lg shadow-md">
+                            <i class="fas fa-user-plus mr-2"></i>
+                            Join ASME (for Freshman Year)
+                        </a>
+                        <a href="https://www.asme.org/membership" target="_blank"
+                            class="bg-white text-blue-800 px-8 py-4 rounded-lg font-bold hover:bg-blue-100 transition inline-block text-lg shadow-md">
+                            <i class="fas fa-user-plus mr-2"></i>
+                            Join ASME (for other years)
+                        </a>
+                    </div>
                 </div>
             </div>
 
