updated hyperlinks in index.html

--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 
                 <div class="achievement-card bg-white rounded-xl overflow-hidden shadow-lg">
                     <div class="h-60 overflow-hidden">
-                        <img src="/assets/achievements/efest-cad.jpg" alt="ASME E-Fest Skills Competition"
+                        <img src="/assets/achievements/kartingchamp.png" alt="Mega Karting Championship"
                             class="w-full h-full object-cover achievement-img">
                     </div>
                     <div class="p-6">
@@ -532,18 +532,19 @@
                             <div class="bg-blue-100 p-2 rounded-full mr-4">
                                 <i class="fas fa-trophy text-blue-800 text-xl"></i>
                             </div>
-                            <h3 class="text-xl font-bold">1st Prize - ASME E-Fest Skills Competition (CAD & Simulation
-                                Challenge)</h3>
+                            <h3 class="text-xl font-bold">AUTOSPORTS INDIA - MEGA KARTING CHAMPIONSHIP- SEASON 1</h3>
                         </div>
-                        <p class="text-gray-600">June 2023: Our team won 1st Prize in the final round of the ASME E-Fest
-                            Skills Competition in the "CAD & Simulation Challenge" category, an international-level
-                            event.</p>
+                        <p class="text-gray-600">Team Garudans won the Overall Championship (₹30,000), placed Runner-Up
+                            in Drag Race and Skid Pad (₹3,000 each), and claimed Autocross Winner (₹5,000) at the Mega
+                            Karting Championship - Season 1 held at Sri Ramakrishna Institute of Technology (SRIT),
+                            Coimbatore, April 11-13, 2025. The team excelled in design, testing, and high-speed racing,
+                            earning multiple accolades for engineering skill and competitive performance.</p>
                     </div>
                 </div>
 
                 <div class="achievement-card bg-white rounded-xl overflow-hidden shadow-lg">
                     <div class="h-60 overflow-hidden">
-                        <img src="/assets/achievements/ikdc23.jpg" alt="IKDC Go-Kart Championship"
+                        <img src="/assets/achievements/tnkcs2feb.png" alt="TNKC Go-Kart Championship Season 2"
                             class="w-full h-full object-cover achievement-img">
                     </div>
                     <div class="p-6">
@@ -551,11 +552,16 @@
                             <div class="bg-blue-100 p-2 rounded-full mr-4">
                                 <i class="fas fa-flag-checkered text-blue-800 text-xl"></i>
                             </div>
-                            <h3 class="text-xl font-bold">Best Acceleration & Autocross - IKDC'23 Go-Kart Championship
+                            <h3 class="text-xl font-bold">
+                                Best Build Quality & SPID PAD Event Winners - TNKC Season 2
                             </h3>
                         </div>
-                        <p class="text-gray-600">July 9, 2023: Team Garudans won "Best Acceleration" and "Best
-                            Autocross" awards at the National Level Go-Kart Championship, IKDC'23, held in Coimbatore.
+                        <p class="text-gray-600 mb-3">
+                            February 4-7, 2025: Team Garudans represented ASME_SRIT at the Tamil Nadu
+                            Karting Championship (TNKC) - Season 2, organized by Mechnido in collaboration with PPG
+                            Institute of Technology, Coimbatore. Over 20 student teams from engineering colleges across
+                            Tamil Nadu participated, competing in both static and dynamic events at PPG Institute of
+                            Technology and Prozone Mall Go-Kart Track.
                         </p>
                     </div>
                 </div>
@@ -650,7 +656,8 @@
                                 <h4 class="font-bold text-lg">Competition Guides</h4>
                                 <p class="text-gray-600">Complete guides for ASME competitions including HPVC, IAM3D,
                                     and Old Guard Presentation</p>
-                                <a href="#" class="text-blue-800 hover:underline text-sm mt-2 inline-block">Download
+                                <a href="https://efests.asme.org/competitions/student-design-competition-(sdc)"
+                                    class="text-blue-800 hover:underline text-sm mt-2 inline-block">Download
                                     Resources</a>
                             </div>
                         </div>
@@ -661,12 +668,13 @@
                                 <h4 class="font-bold text-lg">Tutorial Videos</h4>
                                 <p class="text-gray-600">Step-by-step tutorials for CAD software, engineering
                                     calculations, and project development</p>
-                                <a href="#" class="text-blue-800 hover:underline text-sm mt-2 inline-block">Access
+                                <a href="https://www.youtube.com/watch?v=cmR9cfWJRUU"
+                                    class="text-blue-800 hover:underline text-sm mt-2 inline-block">Access
                                     Tutorials</a>
                             </div>
                         </div>
 
-                        <div class="flex items-start p-4 bg-blue-50 rounded-lg hover:bg-blue-100 transition">
+                        <!-- <div class="flex items-start p-4 bg-blue-50 rounded-lg hover:bg-blue-100 transition">
                             <i class="fas fa-book-open text-blue-800 text-2xl mr-4 mt-1"></i>
                             <div>
                                 <h4 class="font-bold text-lg">Study Materials</h4>
@@ -675,56 +683,59 @@
                                 <a href="#" class="text-blue-800 hover:underline text-sm mt-2 inline-block">Explore
                                     Materials</a>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
 
                 <div class="bg-white p-8 rounded-xl shadow-lg">
-                    <h3 class="text-2xl font-bold text-blue-800 mb-6">Career Development</h3>
+                    <h3 class="text-2xl font-bold text-blue-800 mb-6">ASME SRIT Section - Annual Reports</h3>
                     <div class="space-y-6">
                         <div class="flex items-start p-4 bg-blue-50 rounded-lg hover:bg-blue-100 transition">
-                            <i class="fas fa-briefcase text-blue-800 text-2xl mr-4 mt-1"></i>
+                            <i class="fas fa-file-alt text-blue-800 text-2xl mr-4 mt-1"></i>
                             <div>
-                                <h4 class="font-bold text-lg">Internship Opportunities</h4>
-                                <p class="text-gray-600">Exclusive access to internship openings with partner companies
-                                    and industry leaders</p>
-                                <a href="#" class="text-blue-800 hover:underline text-sm mt-2 inline-block">View
-                                    Opportunities</a>
+                                <h4 class="font-bold text-lg">Annual Report 2022 - 2023</h4>
+                                <p class="text-gray-600">Download a comprehensive overview of activities, achievements,
+                                    and initiatives from the 2022 - 2023 academic year.</p>
+                                <a href="/assets/reports/asme report 2022-2023 1234.pdf"
+                                    class="text-blue-800 hover:underline text-sm mt-2 inline-block">Download
+                                    Report</a>
                             </div>
                         </div>
 
                         <div class="flex items-start p-4 bg-blue-50 rounded-lg hover:bg-blue-100 transition">
-                            <i class="fas fa-handshake text-blue-800 text-2xl mr-4 mt-1"></i>
+                            <i class="fas fa-file-alt text-blue-800 text-2xl mr-4 mt-1"></i>
                             <div>
-                                <h4 class="font-bold text-lg">Industry Connections</h4>
-                                <p class="text-gray-600">Networking events, industry visits, and mentorship programs
-                                    with engineering professionals</p>
-                                <a href="#" class="text-blue-800 hover:underline text-sm mt-2 inline-block">Connect
-                                    Now</a>
+                                <h4 class="font-bold text-lg">Annual Report 2023 - 2024</h4>
+                                <p class="text-gray-600">Review highlights, events, and chapter growth from the
+                                    2023 - 2024 academic year.</p>
+                                <a href="/assets/reports/ASME REPORT 2023-2024.pdf"
+                                    class="text-blue-800 hover:underline text-sm mt-2 inline-block">Download
+                                    Report</a>
                             </div>
                         </div>
 
                         <div class="flex items-start p-4 bg-blue-50 rounded-lg hover:bg-blue-100 transition">
-                            <i class="fas fa-graduation-cap text-blue-800 text-2xl mr-4 mt-1"></i>
+                            <i class="fas fa-file-alt text-blue-800 text-2xl mr-4 mt-1"></i>
                             <div>
-                                <h4 class="font-bold text-lg">Career Guidance</h4>
-                                <p class="text-gray-600">Resume reviews, interview preparation, and career counseling
-                                    sessions</p>
-                                <a href="#" class="text-blue-800 hover:underline text-sm mt-2 inline-block">Get
-                                    Guidance</a>
+                                <h4 class="font-bold text-lg">Annual Report 2024 - 2025</h4>
+                                <p class="text-gray-600">Explore latest achievements, project updates, and future plans
+                                    for the 2024 - 2025 academic year.</p>
+                                <a href="/assets/reports/ASME REPORT 2024-25.pdf"
+                                    class="text-blue-800 hover:underline text-sm mt-2 inline-block">Download
+                                    Report</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="text-center mt-12">
+            <!-- <div class="text-center mt-12">
                 <a href="#"
                     class="inline-flex items-center bg-blue-800 text-white px-8 py-4 rounded-lg font-medium hover:bg-blue-700 transition text-lg">
                     <i class="fas fa-download mr-2"></i>
                     Download Resource Package
                 </a>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -850,8 +861,13 @@
         <div class="container mx-auto px-4">
             <div class="grid md:grid-cols-4 gap-10 mb-10">
                 <div>
+                    <div class="mb-5 flex space-x-4 justify-start">
+                        <img src="/assets/asme-srit.png" alt="ASME SRIT Logo" class="h-12">
+                        <img src="/assets/SRIT - New Logo File.png" alt="SRIT Logo" class="h-12">
+                    </div>
                     <h3 class="text-xl font-bold mb-5">About ASME SRIT</h3>
-                    <p class="text-blue-200">The ASME Student Section at SR Institute of Technology provides students
+                    <p class="text-blue-200">The ASME Student Section at Sri Ramakrishna Institute of Technology
+                        provides students
                         with opportunities for professional development, technical growth, and leadership experience
                         through innovative programs and events.
                     </p>
@@ -870,12 +886,20 @@
                 </div>
 
                 <div>
-                    <h3 class="text-xl font-bold mb-5">Resources</h3>
+                    <h3 class="text-xl font-bold mb-5">Global ASME Competitions</h3>
                     <ul class="space-y-3">
-                        <li><a href="#" class="text-blue-200 hover:text-white transition">Competition Guides</a></li>
-                        <li><a href="#" class="text-blue-200 hover:text-white transition">Career Resources</a></li>
-                        <li><a href="#" class="text-blue-200 hover:text-white transition">Learning Materials</a></li>
-                        <li><a href="#" class="text-blue-200 hover:text-white transition">Event Archives</a></li>
+                        <li><a href="https://efests.asme.org/competitions/asme-extended-reality-challenge"
+                                class="text-blue-200 hover:text-white transition">ASME Extended Reality Challenge (XRC):
+                                Autonomous Vehicles</a></li>
+                        <li><a href="https://efests.asme.org/competitions/human-powered-vehicle-challenge-(hpvc)"
+                                class="text-blue-200 hover:text-white transition">ASME e-Human Powered Vehicle Challenge
+                                (e-HPVC)</a></li>
+                        <li><a href="https://efests.asme.org/competitions/student-design-competition-(sdc)"
+                                class="text-blue-200 hover:text-white transition">ASME Student Design Competition
+                                (SDC)</a></li>
+                        <li><a href="https://efests.asme.org/competitions/asme-innovative-additive-manufacturing-3d-challeng"
+                                class="text-blue-200 hover:text-white transition">ASME Innovative Additive Manufacturing
+                                3D Challenge (IAM3D®)</a></li>
                     </ul>
                 </div>
 
