--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
 
         .hero-bg {
-            background: linear-gradient(rgba(0, 94, 184, 0.85), rgba(0, 94, 184, 0.9)), url('https://images.unsplash.com/photo-1503676260728-1c00da094a0b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1200&q=80');
+            background: linear-gradient(rgba(41, 134, 222, 0.85), rgba(112, 176, 235, 0.9)), url('/assets/srit-hero.jpeg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -166,10 +166,10 @@
     <!-- Header/Navbar -->
     <header class="sticky top-0 z-50 bg-white shadow-md">
         <nav class="container mx-auto px-4 py-3 flex justify-between items-center">
-            <div class="flex items-center">
+            <a href="/index.html" class="flex items-center">
                 <img src="/assets/asme-srit.png" alt="ASME Logo" class="h-12">
                 <span class="ml-2 text-xl font-bold text-blue-800">ASME SRIT Student Section</span>
-            </div>
+            </a>
 
             <div class="hidden md:flex space-x-8">
                 <a href="#home" class="nav-link text-gray-700 hover:text-blue-800 font-medium">Home</a>
@@ -308,17 +308,18 @@
                     <div class="text-center bg-white p-6 rounded-lg shadow-sm card-hover transition">
                         <div
                             class="w-28 h-28 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center shadow-inner">
-                            <img src="/assets/members/manushree.jpeg" alt="Manushree B"
+                            <img src="/assets/members/manushree.jpeg" alt="Manushree A"
                                 class="w-24 h-24 rounded-full object-cover border-4 border-white shadow-md">
                         </div>
-                        <h4 class="font-bold text-lg">Manushree B</h4>
+                        <h4 class="font-bold text-lg">Manushree A</h4>
                         <p class="text-blue-800 font-medium">Secretary</p>
                         <p class="text-sm text-gray-600 mt-2">4th Year Electronics and Communication Engineering</p>
                     </div>
                     <div class="text-center bg-white p-6 rounded-lg shadow-sm card-hover transition">
                         <div
                             class="w-28 h-28 bg-blue-100 rounded-full mx-auto mb-4 flex items-center justify-center shadow-inner">
-                            <i class="fas fa-user text-blue-800 text-4xl"></i>
+                            <img src="/assets/members/nallasivan.png" alt="Nallasivan"
+                                class="w-24 h-24 rounded-full object-cover border-4 border-white shadow-md">
                         </div>
                         <h4 class="font-bold text-lg">Nallasivan B</h4>
                         <p class="text-blue-800 font-medium">Treasurer</p>
@@ -326,6 +327,14 @@
                     </div>
                 </div>
             </div>
+            <div class="text-center mt-8">
+                <a href="/members.html"
+                    class="inline-flex items-center px-6 py-3 bg-blue-800 text-white font-semibold text-lg rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg transition duration-300">
+                    View All Members
+                    <i class="fas fa-arrow-right ml-3"></i>
+                </a>
+            </div>
+
         </div>
     </section>
 
@@ -392,7 +401,7 @@
             </div>
 
             <div class="text-center">
-                <a href="#"
+                <a href="/achievements.html"
                     class="inline-flex items-center text-blue-800 font-bold text-lg hover:text-blue-600 transition">
                     View All Events
                     <i class="fas fa-arrow-right ml-2"></i>
@@ -903,7 +912,7 @@
                     </ul>
                 </div>
 
-                <div>
+                <!-- <div>
                     <h3 class="text-xl font-bold mb-5">Stay Updated</h3>
                     <p class="text-blue-200 mb-5">Subscribe to our newsletter for the latest updates on events,
                         workshops, and opportunities.</p>
@@ -914,26 +923,30 @@
                             <i class="fas fa-paper-plane"></i>
                         </button>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <div class="pt-8 border-t border-blue-800 flex flex-col md:flex-row justify-between items-center">
-                <p class="text-blue-200 mb-4 md:mb-0">© 2025 ASME SRIT Student Section. All rights reserved.</p>
+                <p class="text-blue-200 mb-4 md:mb-0">
+                    © <span id="currentYear"></span> ASME SRIT Student Section. All rights reserved.
+                </p>
                 <div class="flex space-x-5">
-                    <a href="#" class="text-blue-200 hover:text-white transition text-xl"><i
-                            class="fab fa-facebook-f"></i></a>
-                    <a href="#" class="text-blue-200 hover:text-white transition text-xl"><i
-                            class="fab fa-instagram"></i></a>
-                    <a href="#" class="text-blue-200 hover:text-white transition text-xl"><i
-                            class="fab fa-linkedin-in"></i></a>
-                    <a href="#" class="text-blue-200 hover:text-white transition text-xl"><i
-                            class="fab fa-youtube"></i></a>
+                    <!-- <a href="#" class="text-blue-200 hover:text-white transition text-xl"><i
+                            class="fab fa-facebook-f"></i></a> -->
+                    <a href="https://www.instagram.com/asme_srit/"
+                        class="text-blue-200 hover:text-white transition text-xl"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/asme-srit/"
+                        class="text-blue-200 hover:text-white transition text-xl"><i class="fab fa-linkedin-in"></i></a>
+                    <!-- <a href="#" class="text-blue-200 hover:text-white transition text-xl"><i
+                            class="fab fa-youtube"></i></a> -->
                 </div>
             </div>
         </div>
     </footer>
 
     <script>
+        document.getElementById("currentYear").textContent = new Date().getFullYear();
+
         // Mobile menu toggle
         document.getElementById('mobile-menu-button').addEventListener('click', function () {
             const menu = document.getElementById('mobile-menu');
@@ -997,6 +1010,13 @@
                 setTimeout(() => loader.style.display = "none", 500);
             }, 1000); // 1 second delay
         });
+    </script>
+    <script type="module">
+        import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+        Chatbot.init({
+            chatflowid: "075518b6-3f8b-45eb-94b2-367a63b595d6",
+            apiHost: "https://cloud.flowiseai.com",
+        })
     </script>
 </body>
 
