update gowri in members.html

--- a/members.html
+++ b/members.html
@@ -546,7 +546,7 @@
                     <!-- R&D Head -->
                     <div class="bg-white rounded-xl p-5 flex flex-col items-center text-center shadow-sm member-card">
                         <div class="member-img-container w-20 h-20 mb-3">
-                            <img src="/assets/members/gowri.jpg" alt="Gowri Sankar V"
+                            <img src="/assets/members/gowri.png" alt="Gowri Sankar V"
                                 class="w-full h-full object-cover rounded-full border-2 border-blue-200 shadow-sm member-img">
                         </div>
                         <h4 class="font-semibold text-sm text-blue-800 mb-1">Gowri Sankar V</h4>
